# gleaner

./: DATA_STORAGE.md  README.md  iteration-plan.md  iteration.md  mission.md  pyproject.toml
.github/workflows/: deploy.yml
acceptance/: claude-code-capture.md  cursor-capture.md  idempotent-upload.md  list-retrieve-metadata.md  pull-export-sessions.md  retrieve-raw-transcript.md  scrub-before-upload.md
arcade/: effects.py  handler.py  install.py  overlay.py  scoring.py
backend/: Dockerfile  db.py  stats.py
backend/ops/: backfill_counters.py  backfill_tags.py  backfill_topics.py  scrub_cloud.py
docs/: collected-data.md
gleaner/: backfill.py  cc_format.py  cli.py  codex.py  config.py  enrich.py  pipeline.py  pull.py  schema.py  scrub.py  tray.py  upload.py  vault.py
gleaner/hooks/: __init__.py  claude.py  cursor.py
gleaner/remote/: __init__.py  client.py
gleaner/scrub/: __init__.py  legacy.py  patterns.py  presidio.py
gleaner/setup/: __init__.py  autostart.py  config.py  installers.py  sync_agent.py
gleaner/sources/: __init__.py  cc_format.py  claude.py  codex.py  cursor.py  summary.py
gleaner/vault/: __init__.py  schema.py  store.py
input-log/: 2026-07-05-intake.md
iterations/: iteration-1.md
legal/: README.md  download.py
legal/claude/: SESSION-DATA-RIGHTS.md  SOURCES.txt  acceptable-use-policy.md  claude-code-data-usage.md  claude-code-legal-and-compliance.md  commercial-terms.md  consumer-terms.md  download.py  privacy-policy.md
legal/cursor/: SESSION-DATA-RIGHTS.md  (+8 more)
server/: db_local.py  db_mock.py  server.py
tests/: conftest.py  test_architecture.py  test_cli.py  test_codex.py  test_config.py  test_cross_os.py  test_cursor.py  test_db_cloud.py  test_e2e.py  test_idempotent_upload.py  test_pull.py  test_scrub.py  test_setup.py  test_sources_claude.py  test_stats.py  test_tray.py  test_vault.py
wiki/: decisions.md
(+60 files in other folders)
