[project]
name = "gleaner"
version = "0.1.13"
description = "Upload Claude Code session transcripts to Gleaner"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["piicleaner", "detect-secrets", "pydantic>=2", "fastapi>=0.110", "uvicorn>=0.27", "pyarrow"]

[project.scripts]
gleaner = "gleaner.cli:main"
gleaner-upload = "gleaner.hooks.claude:main"
gleaner-backfill = "gleaner.backfill:main"
gleaner-pull = "gleaner.pull:main"
gleaner-cursor-upload = "gleaner.hooks.cursor:main"

[project.optional-dependencies]
presidio = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gleaner", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
